--- a/thesis-by-mafaldas/style.css
+++ b/thesis-by-mafaldas/style.css
@@ -46,7 +46,7 @@ section {
     border: 1px solid #ccc;
 }
 
-#section1 h2, #section1 h3 {
+#section1 h1, #section1 h2  {
     margin-top: 0.5rem; 
     margin-bottom: 0.5rem; 
 }
@@ -94,7 +94,7 @@ section {
     height: 24px;
 }
 
-.text {
+p {
     width: auto;
     height: 28px;
     color: black;
@@ -104,6 +104,20 @@ section {
     line-height: 24px;
     letter-spacing: 0.50px;
     word-wrap: break-word;
+}
+
+h1 {
+    font-size: 30px; 
+    font-family: Arial, sans-serif;
+    font-weight: bold;
+    margin: 0 0 1rem 0; 
+}
+
+h2 {
+    font-size: 24px; 
+    font-family: Arial, sans-serif;
+    font-weight: bold;
+    margin: 0 0 1rem 0;
 }
 
 button#newButton {
@@ -285,6 +299,12 @@ button#newButton {
     }
 
     #section1 {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    #section2 {
         display: flex;
         flex-direction: column;
         gap: 10px;
