Update code after changes

--- a/thesis-by-paul-evans/src/index.css
+++ b/thesis-by-paul-evans/src/index.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  font-family: "Poppins", sans-serif;
   color: whitesmoke;
 }
 
@@ -14,7 +15,6 @@ a {
 
 h1 {
   font-size: 54px;
-  font-family: "Poppins", sans-serif;
   font-weight: 800;
   font-style: normal;
   line-height: 1.2;
@@ -31,7 +31,6 @@ h1 {
 
 h2 {
   font-size: 48px;
-  font-family: "Poppins", sans-serif;
   font-weight: 800;
   font-style: normal;
   line-height: 1.2;
@@ -46,9 +45,8 @@ h2 {
   }
 }
 
-h4 {
+h3 {
   font-size: 32px;
-  font-family: "Poppins", sans-serif;
   font-weight: 700;
   font-style: normal;
   line-height: 1.1;
@@ -58,9 +56,8 @@ h4 {
   }
 }
 
-h5 {
+.subheading {
   font-size: 20px;
-  font-family: "Poppins", sans-serif;
   font-weight: 600;
   font-style: normal;
   line-height: 1.1;
@@ -70,18 +67,8 @@ h5 {
   }
 }
 
-h6 {
-  font-size: 20px;
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  font-style: normal;
-  line-height: 1.1;
-  margin: 0;
-}
-
 p {
   font-size: 18px;
-  font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
   line-height: 1.4;
@@ -89,7 +76,6 @@ p {
 
 li {
   font-size: 16px;
-  font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
   line-height: 1.1;
